--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Julian Ramirez | Style Guide</title>
+<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
